parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> DRAWING ID fd1 declaration
Rule 2     declaration -> var_declaration vd1 func_declaration main
Rule 3     var_declaration -> empty
Rule 4     var_declaration -> var_type addvartype ID varglobal multiple_var var_declaration
Rule 5     varglobal -> <empty>
Rule 6     addvartype -> <empty>
Rule 7     addvardic -> <empty>
Rule 8     multiple_var -> empty
Rule 9     multiple_var -> COMMA ID varglobal multiple_var
Rule 10    var_type -> BOOL
Rule 11    var_type -> WORD
Rule 12    var_type -> NUMBER
Rule 13    func_declaration -> empty
Rule 14    func_declaration -> FUNC resetvars func_type ID fd1 OPEN_PTH parameter CLOSE_PTH stmnt vd1 END
Rule 15    resetvars -> <empty>
Rule 16    fd1 -> <empty>
Rule 17    vd1 -> <empty>
Rule 18    func_type -> BOOL
Rule 19    func_type -> WORD
Rule 20    func_type -> NUMBER
Rule 21    func_type -> VOID
Rule 22    parameter -> empty
Rule 23    parameter -> var_type addvartype ID varid multiple_parameters
Rule 24    multiple_parameters -> empty
Rule 25    multiple_parameters -> COMMA parameter
Rule 26    stmnt -> empty
Rule 27    stmnt -> returnf stmnt
Rule 28    stmnt -> var_declaration_func stmnt
Rule 29    stmnt -> pen_func stmnt
Rule 30    stmnt -> move_func stmnt
Rule 31    stmnt -> while_stmnt stmnt
Rule 32    stmnt -> if_stmnt stmnt
Rule 33    stmnt -> write stmnt
Rule 34    stmnt -> read stmnt
Rule 35    stmnt -> func_call stmnt
Rule 36    stmnt -> var_assignation stmnt
Rule 37    returnf -> RETURN expression
Rule 38    var_declaration_func -> var_type addvartype ID varid multiple_vars
Rule 39    varid -> <empty>
Rule 40    var_assignation -> ID e5 assign e6 expression q3
Rule 41    e5 -> <empty>
Rule 42    e6 -> <empty>
Rule 43    assign -> ASSIGN
Rule 44    var_cte -> func_call
Rule 45    var_cte -> cte_bool
Rule 46    var_cte -> CTE_STR
Rule 47    var_cte -> CTE_NUM
Rule 48    var_cte -> variable
Rule 49    cte_bool -> FALSE
Rule 50    cte_bool -> TRUE
Rule 51    expression -> exp q4
Rule 52    expression -> exp rel_op exp q4
Rule 53    q4 -> <empty>
Rule 54    e4 -> <empty>
Rule 55    exp -> termino q1
Rule 56    exp -> termino term_op e3 termino q1
Rule 57    e3 -> <empty>
Rule 58    q2 -> <empty>
Rule 59    term_op -> SUB
Rule 60    term_op -> SUM
Rule 61    termino -> factor q2
Rule 62    termino -> factor fact_op e2 expression q2
Rule 63    q1 -> <empty>
Rule 64    q3 -> <empty>
Rule 65    e2 -> <empty>
Rule 66    fact_op -> DIV
Rule 67    fact_op -> MULT
Rule 68    factor -> var_cte e1
Rule 69    factor -> open_pth expression close_pth
Rule 70    e1 -> <empty>
Rule 71    open_pth -> OPEN_PTH
Rule 72    close_pth -> CLOSE_PTH
Rule 73    log_op -> OR
Rule 74    log_op -> AND
Rule 75    rel_op -> EQUAL_TO
Rule 76    rel_op -> MORE_OR_EQ_THAN
Rule 77    rel_op -> LESS_OR_EQ_THAN
Rule 78    rel_op -> DIFFERENT_TO
Rule 79    rel_op -> MORE_THAN
Rule 80    rel_op -> LESS_THAN
Rule 81    func_call -> ID OPEN_PTH func1 func_call_param CLOSE_PTH func3
Rule 82    func1 -> <empty>
Rule 83    func_call_param -> expression func2 multiple_fc_param
Rule 84    func2 -> <empty>
Rule 85    func3 -> <empty>
Rule 86    multiple_fc_param -> empty
Rule 87    multiple_fc_param -> COMMA func_call_param
Rule 88    read -> READ OPEN_PTH variable multiple_vars CLOSE_PTH
Rule 89    variable -> ID array
Rule 90    array -> empty
Rule 91    array -> OPEN_SQR expression CLOSE_SQR matrix
Rule 92    matrix -> empty
Rule 93    matrix -> OPEN_SQR expression CLOSE_SQR
Rule 94    multiple_vars -> empty
Rule 95    multiple_vars -> COMMA variable varid
Rule 96    write -> WRITE OPEN_PTH expression CLOSE_PTH
Rule 97    if_stmnt -> IF con_expression if1 stmnt if2 else_stmnt
Rule 98    if1 -> <empty>
Rule 99    if2 -> <empty>
Rule 100   else_stmnt -> END
Rule 101   else_stmnt -> ELSE if3 stmnt if4 END
Rule 102   if3 -> <empty>
Rule 103   if4 -> <empty>
Rule 104   while_stmnt -> WHILE w1 con_expression w2 stmnt w3 END
Rule 105   w1 -> <empty>
Rule 106   w2 -> <empty>
Rule 107   w3 -> <empty>
Rule 108   con_expression -> expression q5
Rule 109   con_expression -> expression q5 log_op e7 expression q5
Rule 110   e7 -> <empty>
Rule 111   q5 -> <empty>
Rule 112   move_func -> move_type OPEN_PTH func_call_param CLOSE_PTH
Rule 113   move_type -> CENTER
Rule 114   move_type -> FORWARD
Rule 115   move_type -> RIGHT
Rule 116   move_type -> LEFT
Rule 117   pen_func -> PEN_DOWN OPEN_PTH CLOSE_PTH
Rule 118   pen_func -> PEN_UP OPEN_PTH CLOSE_PTH
Rule 119   md1 -> <empty>
Rule 120   main -> MAIN fd1 resetvars stmnt vd1 END
Rule 121   empty -> <empty>

Terminals, with rules where they appear:

AND                  : 74
ASSIGN               : 43
BOOL                 : 10 18
CENTER               : 113
CLOSE_PTH            : 14 72 81 88 96 112 117 118
CLOSE_SQR            : 91 93
COMMA                : 9 25 87 95
CTE_NUM              : 47
CTE_STR              : 46
DIFFERENT_TO         : 78
DIV                  : 66
DRAWING              : 1
ELSE                 : 101
END                  : 14 100 101 104 120
EQUAL_TO             : 75
FALSE                : 49
FORWARD              : 114
FUNC                 : 14
ID                   : 1 4 9 14 23 38 40 81 89
IF                   : 97
LEFT                 : 116
LESS_OR_EQ_THAN      : 77
LESS_THAN            : 80
MAIN                 : 120
MORE_OR_EQ_THAN      : 76
MORE_THAN            : 79
MULT                 : 67
NUMBER               : 12 20
OPEN_PTH             : 14 71 81 88 96 112 117 118
OPEN_SQR             : 91 93
OR                   : 73
PEN_DOWN             : 117
PEN_UP               : 118
READ                 : 88
RETURN               : 37
RIGHT                : 115
SUB                  : 59
SUM                  : 60
TRUE                 : 50
VOID                 : 21
WHILE                : 104
WORD                 : 11 19
WRITE                : 96
error                : 

Nonterminals, with rules where they appear:

addvardic            : 
addvartype           : 4 23 38
array                : 89
assign               : 40
close_pth            : 69
con_expression       : 97 104
cte_bool             : 45
declaration          : 1
e1                   : 68
e2                   : 62
e3                   : 56
e4                   : 
e5                   : 40
e6                   : 40
e7                   : 109
else_stmnt           : 97
empty                : 3 8 13 22 24 26 86 90 92 94
exp                  : 51 52 52
expression           : 37 40 62 69 83 91 93 96 108 109 109
fact_op              : 62
factor               : 61 62
fd1                  : 1 14 120
func1                : 81
func2                : 83
func3                : 81
func_call            : 35 44
func_call_param      : 81 87 112
func_declaration     : 2
func_type            : 14
if1                  : 97
if2                  : 97
if3                  : 101
if4                  : 101
if_stmnt             : 32
log_op               : 109
main                 : 2
matrix               : 91
md1                  : 
move_func            : 30
move_type            : 112
multiple_fc_param    : 83
multiple_parameters  : 23
multiple_var         : 4 9
multiple_vars        : 38 88
open_pth             : 69
parameter            : 14 25
pen_func             : 29
program              : 0
q1                   : 55 56
q2                   : 61 62
q3                   : 40
q4                   : 51 52
q5                   : 108 109 109
read                 : 34
rel_op               : 52
resetvars            : 14 120
returnf              : 27
stmnt                : 14 27 28 29 30 31 32 33 34 35 36 97 101 104 120
term_op              : 56
termino              : 55 56 56
var_assignation      : 36
var_cte              : 68
var_declaration      : 2 4
var_declaration_func : 28
var_type             : 4 23 38
varglobal            : 4 9
variable             : 48 88 95
varid                : 23 38 95
vd1                  : 2 14 120
w1                   : 104
w2                   : 104
w3                   : 104
while_stmnt          : 31
write                : 33


state 0

    (0) S' -> . program
    (1) program -> . DRAWING ID fd1 declaration
    DRAWING         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .


state 2

    (1) program -> DRAWING . ID fd1 declaration
    ID              shift and go to state 3


state 3

    (1) program -> DRAWING ID . fd1 declaration
    (16) fd1 -> .
    BOOL            reduce using rule 16 (fd1 -> .)
    WORD            reduce using rule 16 (fd1 -> .)
    NUMBER          reduce using rule 16 (fd1 -> .)
    FUNC            reduce using rule 16 (fd1 -> .)
    MAIN            reduce using rule 16 (fd1 -> .)

    fd1                            shift and go to state 4

state 4

    (1) program -> DRAWING ID fd1 . declaration
    (2) declaration -> . var_declaration vd1 func_declaration main
    (3) var_declaration -> . empty
    (4) var_declaration -> . var_type addvartype ID varglobal multiple_var var_declaration
    (121) empty -> .
    (10) var_type -> . BOOL
    (11) var_type -> . WORD
    (12) var_type -> . NUMBER
    FUNC            reduce using rule 121 (empty -> .)
    MAIN            reduce using rule 121 (empty -> .)
    BOOL            shift and go to state 9
    WORD            shift and go to state 10
    NUMBER          shift and go to state 11

    declaration                    shift and go to state 5
    var_declaration                shift and go to state 6
    empty                          shift and go to state 7
    var_type                       shift and go to state 8

state 5

    (1) program -> DRAWING ID fd1 declaration .
    $end            reduce using rule 1 (program -> DRAWING ID fd1 declaration .)


state 6

    (2) declaration -> var_declaration . vd1 func_declaration main
    (17) vd1 -> .
    FUNC            reduce using rule 17 (vd1 -> .)
    MAIN            reduce using rule 17 (vd1 -> .)

    vd1                            shift and go to state 12

state 7

    (3) var_declaration -> empty .
    FUNC            reduce using rule 3 (var_declaration -> empty .)
    MAIN            reduce using rule 3 (var_declaration -> empty .)


state 8

    (4) var_declaration -> var_type . addvartype ID varglobal multiple_var var_declaration
    (6) addvartype -> .
    ID              reduce using rule 6 (addvartype -> .)

    addvartype                     shift and go to state 13

state 9

    (10) var_type -> BOOL .
    ID              reduce using rule 10 (var_type -> BOOL .)


state 10

    (11) var_type -> WORD .
    ID              reduce using rule 11 (var_type -> WORD .)


state 11

    (12) var_type -> NUMBER .
    ID              reduce using rule 12 (var_type -> NUMBER .)


state 12

    (2) declaration -> var_declaration vd1 . func_declaration main
    (13) func_declaration -> . empty
    (14) func_declaration -> . FUNC resetvars func_type ID fd1 OPEN_PTH parameter CLOSE_PTH stmnt vd1 END
    (121) empty -> .
    FUNC            shift and go to state 16
    MAIN            reduce using rule 121 (empty -> .)

    func_declaration               shift and go to state 14
    empty                          shift and go to state 15

state 13

    (4) var_declaration -> var_type addvartype . ID varglobal multiple_var var_declaration
    ID              shift and go to state 17


state 14

    (2) declaration -> var_declaration vd1 func_declaration . main
    (120) main -> . MAIN fd1 resetvars stmnt vd1 END
    MAIN            shift and go to state 19

    main                           shift and go to state 18

state 15

    (13) func_declaration -> empty .
    MAIN            reduce using rule 13 (func_declaration -> empty .)


state 16

    (14) func_declaration -> FUNC . resetvars func_type ID fd1 OPEN_PTH parameter CLOSE_PTH stmnt vd1 END
    (15) resetvars -> .
    BOOL            reduce using rule 15 (resetvars -> .)
    WORD            reduce using rule 15 (resetvars -> .)
    NUMBER          reduce using rule 15 (resetvars -> .)
    VOID            reduce using rule 15 (resetvars -> .)

    resetvars                      shift and go to state 20

state 17

    (4) var_declaration -> var_type addvartype ID . varglobal multiple_var var_declaration
    (5) varglobal -> .
    COMMA           reduce using rule 5 (varglobal -> .)
    BOOL            reduce using rule 5 (varglobal -> .)
    WORD            reduce using rule 5 (varglobal -> .)
    NUMBER          reduce using rule 5 (varglobal -> .)
    FUNC            reduce using rule 5 (varglobal -> .)
    MAIN            reduce using rule 5 (varglobal -> .)

    varglobal                      shift and go to state 21

state 18

    (2) declaration -> var_declaration vd1 func_declaration main .
    $end            reduce using rule 2 (declaration -> var_declaration vd1 func_declaration main .)


state 19

    (120) main -> MAIN . fd1 resetvars stmnt vd1 END
    (16) fd1 -> .
    RETURN          reduce using rule 16 (fd1 -> .)
    PEN_DOWN        reduce using rule 16 (fd1 -> .)
    PEN_UP          reduce using rule 16 (fd1 -> .)
    WHILE           reduce using rule 16 (fd1 -> .)
    IF              reduce using rule 16 (fd1 -> .)
    WRITE           reduce using rule 16 (fd1 -> .)
    READ            reduce using rule 16 (fd1 -> .)
    ID              reduce using rule 16 (fd1 -> .)
    BOOL            reduce using rule 16 (fd1 -> .)
    WORD            reduce using rule 16 (fd1 -> .)
    NUMBER          reduce using rule 16 (fd1 -> .)
    CENTER          reduce using rule 16 (fd1 -> .)
    FORWARD         reduce using rule 16 (fd1 -> .)
    RIGHT           reduce using rule 16 (fd1 -> .)
    LEFT            reduce using rule 16 (fd1 -> .)
    END             reduce using rule 16 (fd1 -> .)

    fd1                            shift and go to state 22

state 20

    (14) func_declaration -> FUNC resetvars . func_type ID fd1 OPEN_PTH parameter CLOSE_PTH stmnt vd1 END
    (18) func_type -> . BOOL
    (19) func_type -> . WORD
    (20) func_type -> . NUMBER
    (21) func_type -> . VOID
    BOOL            shift and go to state 24
    WORD            shift and go to state 25
    NUMBER          shift and go to state 26
    VOID            shift and go to state 27

    func_type                      shift and go to state 23

state 21

    (4) var_declaration -> var_type addvartype ID varglobal . multiple_var var_declaration
    (8) multiple_var -> . empty
    (9) multiple_var -> . COMMA ID varglobal multiple_var
    (121) empty -> .
    COMMA           shift and go to state 30
    BOOL            reduce using rule 121 (empty -> .)
    WORD            reduce using rule 121 (empty -> .)
    NUMBER          reduce using rule 121 (empty -> .)
    FUNC            reduce using rule 121 (empty -> .)
    MAIN            reduce using rule 121 (empty -> .)

    multiple_var                   shift and go to state 28
    empty                          shift and go to state 29

state 22

    (120) main -> MAIN fd1 . resetvars stmnt vd1 END
    (15) resetvars -> .
    RETURN          reduce using rule 15 (resetvars -> .)
    PEN_DOWN        reduce using rule 15 (resetvars -> .)
    PEN_UP          reduce using rule 15 (resetvars -> .)
    WHILE           reduce using rule 15 (resetvars -> .)
    IF              reduce using rule 15 (resetvars -> .)
    WRITE           reduce using rule 15 (resetvars -> .)
    READ            reduce using rule 15 (resetvars -> .)
    ID              reduce using rule 15 (resetvars -> .)
    BOOL            reduce using rule 15 (resetvars -> .)
    WORD            reduce using rule 15 (resetvars -> .)
    NUMBER          reduce using rule 15 (resetvars -> .)
    CENTER          reduce using rule 15 (resetvars -> .)
    FORWARD         reduce using rule 15 (resetvars -> .)
    RIGHT           reduce using rule 15 (resetvars -> .)
    LEFT            reduce using rule 15 (resetvars -> .)
    END             reduce using rule 15 (resetvars -> .)

    resetvars                      shift and go to state 31

state 23

    (14) func_declaration -> FUNC resetvars func_type . ID fd1 OPEN_PTH parameter CLOSE_PTH stmnt vd1 END
    ID              shift and go to state 32


state 24

    (18) func_type -> BOOL .
    ID              reduce using rule 18 (func_type -> BOOL .)


state 25

    (19) func_type -> WORD .
    ID              reduce using rule 19 (func_type -> WORD .)


state 26

    (20) func_type -> NUMBER .
    ID              reduce using rule 20 (func_type -> NUMBER .)


state 27

    (21) func_type -> VOID .
    ID              reduce using rule 21 (func_type -> VOID .)


state 28

    (4) var_declaration -> var_type addvartype ID varglobal multiple_var . var_declaration
    (3) var_declaration -> . empty
    (4) var_declaration -> . var_type addvartype ID varglobal multiple_var var_declaration
    (121) empty -> .
    (10) var_type -> . BOOL
    (11) var_type -> . WORD
    (12) var_type -> . NUMBER
    FUNC            reduce using rule 121 (empty -> .)
    MAIN            reduce using rule 121 (empty -> .)
    BOOL            shift and go to state 9
    WORD            shift and go to state 10
    NUMBER          shift and go to state 11

    var_type                       shift and go to state 8
    var_declaration                shift and go to state 33
    empty                          shift and go to state 7

state 29

    (8) multiple_var -> empty .
    BOOL            reduce using rule 8 (multiple_var -> empty .)
    WORD            reduce using rule 8 (multiple_var -> empty .)
    NUMBER          reduce using rule 8 (multiple_var -> empty .)
    FUNC            reduce using rule 8 (multiple_var -> empty .)
    MAIN            reduce using rule 8 (multiple_var -> empty .)


state 30

    (9) multiple_var -> COMMA . ID varglobal multiple_var
    ID              shift and go to state 34


state 31

    (120) main -> MAIN fd1 resetvars . stmnt vd1 END
    (26) stmnt -> . empty
    (27) stmnt -> . returnf stmnt
    (28) stmnt -> . var_declaration_func stmnt
    (29) stmnt -> . pen_func stmnt
    (30) stmnt -> . move_func stmnt
    (31) stmnt -> . while_stmnt stmnt
    (32) stmnt -> . if_stmnt stmnt
    (33) stmnt -> . write stmnt
    (34) stmnt -> . read stmnt
    (35) stmnt -> . func_call stmnt
    (36) stmnt -> . var_assignation stmnt
    (121) empty -> .
    (37) returnf -> . RETURN expression
    (38) var_declaration_func -> . var_type addvartype ID varid multiple_vars
    (117) pen_func -> . PEN_DOWN OPEN_PTH CLOSE_PTH
    (118) pen_func -> . PEN_UP OPEN_PTH CLOSE_PTH
    (112) move_func -> . move_type OPEN_PTH func_call_param CLOSE_PTH
    (104) while_stmnt -> . WHILE w1 con_expression w2 stmnt w3 END
    (97) if_stmnt -> . IF con_expression if1 stmnt if2 else_stmnt
    (96) write -> . WRITE OPEN_PTH expression CLOSE_PTH
    (88) read -> . READ OPEN_PTH variable multiple_vars CLOSE_PTH
    (81) func_call -> . ID OPEN_PTH func1 func_call_param CLOSE_PTH func3
    (40) var_assignation -> . ID e5 assign e6 expression q3
    (10) var_type -> . BOOL
    (11) var_type -> . WORD
    (12) var_type -> . NUMBER
    (113) move_type -> . CENTER
    (114) move_type -> . FORWARD
    (115) move_type -> . RIGHT
    (116) move_type -> . LEFT
    END             reduce using rule 121 (empty -> .)
    RETURN          shift and go to state 47
    PEN_DOWN        shift and go to state 50
    PEN_UP          shift and go to state 51
    WHILE           shift and go to state 53
    IF              shift and go to state 54
    WRITE           shift and go to state 55
    READ            shift and go to state 56
    ID              shift and go to state 49
    BOOL            shift and go to state 9
    WORD            shift and go to state 10
    NUMBER          shift and go to state 11
    CENTER          shift and go to state 57
    FORWARD         shift and go to state 58
    RIGHT           shift and go to state 59
    LEFT            shift and go to state 60

    stmnt                          shift and go to state 35
    empty                          shift and go to state 36
    returnf                        shift and go to state 37
    var_declaration_func           shift and go to state 38
    pen_func                       shift and go to state 39
    move_func                      shift and go to state 40
    while_stmnt                    shift and go to state 41
    if_stmnt                       shift and go to state 42
    write                          shift and go to state 43
    read                           shift and go to state 44
    func_call                      shift and go to state 45
    var_assignation                shift and go to state 46
    var_type                       shift and go to state 48
    move_type                      shift and go to state 52

state 32

    (14) func_declaration -> FUNC resetvars func_type ID . fd1 OPEN_PTH parameter CLOSE_PTH stmnt vd1 END
    (16) fd1 -> .
    OPEN_PTH        reduce using rule 16 (fd1 -> .)

    fd1                            shift and go to state 61

state 33

    (4) var_declaration -> var_type addvartype ID varglobal multiple_var var_declaration .
    FUNC            reduce using rule 4 (var_declaration -> var_type addvartype ID varglobal multiple_var var_declaration .)
    MAIN            reduce using rule 4 (var_declaration -> var_type addvartype ID varglobal multiple_var var_declaration .)


state 34

    (9) multiple_var -> COMMA ID . varglobal multiple_var
    (5) varglobal -> .
    COMMA           reduce using rule 5 (varglobal -> .)
    BOOL            reduce using rule 5 (varglobal -> .)
    WORD            reduce using rule 5 (varglobal -> .)
    NUMBER          reduce using rule 5 (varglobal -> .)
    FUNC            reduce using rule 5 (varglobal -> .)
    MAIN            reduce using rule 5 (varglobal -> .)

    varglobal                      shift and go to state 62

state 35

    (120) main -> MAIN fd1 resetvars stmnt . vd1 END
    (17) vd1 -> .
    END             reduce using rule 17 (vd1 -> .)

    vd1                            shift and go to state 63

state 36

    (26) stmnt -> empty .
    END             reduce using rule 26 (stmnt -> empty .)
    ELSE            reduce using rule 26 (stmnt -> empty .)


state 37

    (27) stmnt -> returnf . stmnt
    (26) stmnt -> . empty
    (27) stmnt -> . returnf stmnt
    (28) stmnt -> . var_declaration_func stmnt
    (29) stmnt -> . pen_func stmnt
    (30) stmnt -> . move_func stmnt
    (31) stmnt -> . while_stmnt stmnt
    (32) stmnt -> . if_stmnt stmnt
    (33) stmnt -> . write stmnt
    (34) stmnt -> . read stmnt
    (35) stmnt -> . func_call stmnt
    (36) stmnt -> . var_assignation stmnt
    (121) empty -> .
    (37) returnf -> . RETURN expression
    (38) var_declaration_func -> . var_type addvartype ID varid multiple_vars
    (117) pen_func -> . PEN_DOWN OPEN_PTH CLOSE_PTH
    (118) pen_func -> . PEN_UP OPEN_PTH CLOSE_PTH
    (112) move_func -> . move_type OPEN_PTH func_call_param CLOSE_PTH
    (104) while_stmnt -> . WHILE w1 con_expression w2 stmnt w3 END
    (97) if_stmnt -> . IF con_expression if1 stmnt if2 else_stmnt
    (96) write -> . WRITE OPEN_PTH expression CLOSE_PTH
    (88) read -> . READ OPEN_PTH variable multiple_vars CLOSE_PTH
    (81) func_call -> . ID OPEN_PTH func1 func_call_param CLOSE_PTH func3
    (40) var_assignation -> . ID e5 assign e6 expression q3
    (10) var_type -> . BOOL
    (11) var_type -> . WORD
    (12) var_type -> . NUMBER
    (113) move_type -> . CENTER
    (114) move_type -> . FORWARD
    (115) move_type -> . RIGHT
    (116) move_type -> . LEFT
    END             reduce using rule 121 (empty -> .)
    ELSE            reduce using rule 121 (empty -> .)
    RETURN          shift and go to state 47
    PEN_DOWN        shift and go to state 50
    PEN_UP          shift and go to state 51
    WHILE           shift and go to state 53
    IF              shift and go to state 54
    WRITE           shift and go to state 55
    READ            shift and go to state 56
    ID              shift and go to state 49
    BOOL            shift and go to state 9
    WORD            shift and go to state 10
    NUMBER          shift and go to state 11
    CENTER          shift and go to state 57
    FORWARD         shift and go to state 58
    RIGHT           shift and go to state 59
    LEFT            shift and go to state 60

    returnf                        shift and go to state 37
    stmnt                          shift and go to state 64
    empty                          shift and go to state 36
    var_declaration_func           shift and go to state 38
    pen_func                       shift and go to state 39
    move_func                      shift and go to state 40
    while_stmnt                    shift and go to state 41
    if_stmnt                       shift and go to state 42
    write                          shift and go to state 43
    read                           shift and go to state 44
    func_call                      shift and go to state 45
    var_assignation                shift and go to state 46
    var_type                       shift and go to state 48
    move_type                      shift and go to state 52

state 38

    (28) stmnt -> var_declaration_func . stmnt
    (26) stmnt -> . empty
    (27) stmnt -> . returnf stmnt
    (28) stmnt -> . var_declaration_func stmnt
    (29) stmnt -> . pen_func stmnt
    (30) stmnt -> . move_func stmnt
    (31) stmnt -> . while_stmnt stmnt
    (32) stmnt -> . if_stmnt stmnt
    (33) stmnt -> . write stmnt
    (34) stmnt -> . read stmnt
    (35) stmnt -> . func_call stmnt
    (36) stmnt -> . var_assignation stmnt
    (121) empty -> .
    (37) returnf -> . RETURN expression
    (38) var_declaration_func -> . var_type addvartype ID varid multiple_vars
    (117) pen_func -> . PEN_DOWN OPEN_PTH CLOSE_PTH
    (118) pen_func -> . PEN_UP OPEN_PTH CLOSE_PTH
    (112) move_func -> . move_type OPEN_PTH func_call_param CLOSE_PTH
    (104) while_stmnt -> . WHILE w1 con_expression w2 stmnt w3 END
    (97) if_stmnt -> . IF con_expression if1 stmnt if2 else_stmnt
    (96) write -> . WRITE OPEN_PTH expression CLOSE_PTH
    (88) read -> . READ OPEN_PTH variable multiple_vars CLOSE_PTH
    (81) func_call -> . ID OPEN_PTH func1 func_call_param CLOSE_PTH func3
    (40) var_assignation -> . ID e5 assign e6 expression q3
    (10) var_type -> . BOOL
    (11) var_type -> . WORD
    (12) var_type -> . NUMBER
    (113) move_type -> . CENTER
    (114) move_type -> . FORWARD
    (115) move_type -> . RIGHT
    (116) move_type -> . LEFT
    END             reduce using rule 121 (empty -> .)
    ELSE            reduce using rule 121 (empty -> .)
    RETURN          shift and go to state 47
    PEN_DOWN        shift and go to state 50
    PEN_UP          shift and go to state 51
    WHILE           shift and go to state 53
    IF              shift and go to state 54
    WRITE           shift and go to state 55
    READ            shift and go to state 56
    ID              shift and go to state 49
    BOOL            shift and go to state 9
    WORD            shift and go to state 10
    NUMBER          shift and go to state 11
    CENTER          shift and go to state 57
    FORWARD         shift and go to state 58
    RIGHT           shift and go to state 59
    LEFT            shift and go to state 60

    var_declaration_func           shift and go to state 38
    stmnt                          shift and go to state 65
    empty                          shift and go to state 36
    returnf                        shift and go to state 37
    pen_func                       shift and go to state 39
    move_func                      shift and go to state 40
    while_stmnt                    shift and go to state 41
    if_stmnt                       shift and go to state 42
    write                          shift and go to state 43
    read                           shift and go to state 44
    func_call                      shift and go to state 45
    var_assignation                shift and go to state 46
    var_type                       shift and go to state 48
    move_type                      shift and go to state 52

state 39

    (29) stmnt -> pen_func . stmnt
    (26) stmnt -> . empty
    (27) stmnt -> . returnf stmnt
    (28) stmnt -> . var_declaration_func stmnt
    (29) stmnt -> . pen_func stmnt
    (30) stmnt -> . move_func stmnt
    (31) stmnt -> . while_stmnt stmnt
    (32) stmnt -> . if_stmnt stmnt
    (33) stmnt -> . write stmnt
    (34) stmnt -> . read stmnt
    (35) stmnt -> . func_call stmnt
    (36) stmnt -> . var_assignation stmnt
    (121) empty -> .
    (37) returnf -> . RETURN expression
    (38) var_declaration_func -> . var_type addvartype ID varid multiple_vars
    (117) pen_func -> . PEN_DOWN OPEN_PTH CLOSE_PTH
    (118) pen_func -> . PEN_UP OPEN_PTH CLOSE_PTH
    (112) move_func -> . move_type OPEN_PTH func_call_param CLOSE_PTH
    (104) while_stmnt -> . WHILE w1 con_expression w2 stmnt w3 END
    (97) if_stmnt -> . IF con_expression if1 stmnt if2 else_stmnt
    (96) write -> . WRITE OPEN_PTH expression CLOSE_PTH
    (88) read -> . READ OPEN_PTH variable multiple_vars CLOSE_PTH
    (81) func_call -> . ID OPEN_PTH func1 func_call_param CLOSE_PTH func3
    (40) var_assignation -> . ID e5 assign e6 expression q3
    (10) var_type -> . BOOL
    (11) var_type -> . WORD
    (12) var_type -> . NUMBER
    (113) move_type -> . CENTER
    (114) move_type -> . FORWARD
    (115) move_type -> . RIGHT
    (116) move_type -> . LEFT
    END             reduce using rule 121 (empty -> .)
    ELSE            reduce using rule 121 (empty -> .)
    RETURN          shift and go to state 47
    PEN_DOWN        shift and go to state 50
    PEN_UP          shift and go to state 51
    WHILE           shift and go to state 53
    IF              shift and go to state 54
    WRITE           shift and go to state 55
    READ            shift and go to state 56
    ID              shift and go to state 49
    BOOL            shift and go to state 9
    WORD            shift and go to state 10
    NUMBER          shift and go to state 11
    CENTER          shift and go to state 57
    FORWARD         shift and go to state 58
    RIGHT           shift and go to state 59
    LEFT            shift and go to state 60

    pen_func                       shift and go to state 39
    stmnt                          shift and go to state 66
    empty                          shift and go to state 36
    returnf                        shift and go to state 37
    var_declaration_func           shift and go to state 38
    move_func                      shift and go to state 40
    while_stmnt                    shift and go to state 41
    if_stmnt                       shift and go to state 42
    write                          shift and go to state 43
    read                           shift and go to state 44
    func_call                      shift and go to state 45
    var_assignation                shift and go to state 46
    var_type                       shift and go to state 48
    move_type                      shift and go to state 52

state 40

    (30) stmnt -> move_func . stmnt
    (26) stmnt -> . empty
    (27) stmnt -> . returnf stmnt
    (28) stmnt -> . var_declaration_func stmnt
    (29) stmnt -> . pen_func stmnt
    (30) stmnt -> . move_func stmnt
    (31) stmnt -> . while_stmnt stmnt
    (32) stmnt -> . if_stmnt stmnt
    (33) stmnt -> . write stmnt
    (34) stmnt -> . read stmnt
    (35) stmnt -> . func_call stmnt
    (36) stmnt -> . var_assignation stmnt
    (121) empty -> .
    (37) returnf -> . RETURN expression
    (38) var_declaration_func -> . var_type addvartype ID varid multiple_vars
    (117) pen_func -> . PEN_DOWN OPEN_PTH CLOSE_PTH
    (118) pen_func -> . PEN_UP OPEN_PTH CLOSE_PTH
    (112) move_func -> . move_type OPEN_PTH func_call_param CLOSE_PTH
    (104) while_stmnt -> . WHILE w1 con_expression w2 stmnt w3 END
    (97) if_stmnt -> . IF con_expression if1 stmnt if2 else_stmnt
    (96) write -> . WRITE OPEN_PTH expression CLOSE_PTH
    (88) read -> . READ OPEN_PTH variable multiple_vars CLOSE_PTH
    (81) func_call -> . ID OPEN_PTH func1 func_call_param CLOSE_PTH func3
    (40) var_assignation -> . ID e5 assign e6 expression q3
    (10) var_type -> . BOOL
    (11) var_type -> . WORD
    (12) var_type -> . NUMBER
    (113) move_type -> . CENTER
    (114) move_type -> . FORWARD
    (115) move_type -> . RIGHT
    (116) move_type -> . LEFT
    END             reduce using rule 121 (empty -> .)
    ELSE            reduce using rule 121 (empty -> .)
    RETURN          shift and go to state 47
    PEN_DOWN        shift and go to state 50
    PEN_UP          shift and go to state 51
    WHILE           shift and go to state 53
    IF              shift and go to state 54
    WRITE           shift and go to state 55
    READ            shift and go to state 56
    ID              shift and go to state 49
    BOOL            shift and go to state 9
    WORD            shift and go to state 10
    NUMBER          shift and go to state 11
    CENTER          shift and go to state 57
    FORWARD         shift and go to state 58
    RIGHT           shift and go to state 59
    LEFT            shift and go to state 60

    move_func                      shift and go to state 40
    stmnt                          shift and go to state 67
    empty                          shift and go to state 36
    returnf                        shift and go to state 37
    var_declaration_func           shift and go to state 38
    pen_func                       shift and go to state 39
    while_stmnt                    shift and go to state 41
    if_stmnt                       shift and go to state 42
    write                          shift and go to state 43
    read                           shift and go to state 44
    func_call                      shift and go to state 45
    var_assignation                shift and go to state 46
    var_type                       shift and go to state 48
    move_type                      shift and go to state 52

state 41
